nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rahul
  name: worker1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rahul
  template:
    metadata:
      labels:
        app: rahul
    spec:
      containers:
      - image: rahulsyal92/demo1
        name: nginxapache
        ports:
        - containerPort: 80
      nodeSelector:
       node: worker1
