service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rahul
  name: mysvc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rahul
  type: NodePort
