metworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: policy-1
   namespace: rahul
spec:
  podSelector:
   matchLabels:
     app: pari
  policyTypes:
  - Ingress:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: syal
